lib/src/duckdb_bindings.dart


  int duckdb_bind_uint32(
    duckdb_prepared_statement prepared_statement,
    int param_idx,
    int val,
  ) {
    return _duckdb_bind_uint32(
      prepared_statement,
      param_idx,
      val,
    );
  }

  late final _duckdb_bind_uint32Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(duckdb_prepared_statement, idx_t,
              ffi.Uint32)>>('duckdb_bind_uint32');
  late final _duckdb_bind_uint32 = _duckdb_bind_uint32Ptr
      .asFunction<int Function(duckdb_prepared_statement, int, int)>();

  int duckdb_bind_uint64(
    duckdb_prepared_statement prepared_statement,
    int param_idx,
    int val,
  ) {
    return _duckdb_bind_uint64(
      prepared_statement,
      param_idx,
      val,
    );
  }

  late final _duckdb_bind_uint64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(duckdb_prepared_statement, idx_t,
              ffi.Uint64)>>('duckdb_bind_uint64');
  late final _duckdb_bind_uint64 = _duckdb_bind_uint64Ptr
      .asFunction<int Function(duckdb_prepared_statement, int, int)>();

  int duckdb_bind_float(
    duckdb_prepared_statement prepared_statement,
    int param_idx,
    double val,
  ) {
    return _duckdb_bind_float(
      prepared_statement,
      param_idx,
      val,
    );
  }

  late final _duckdb_bind_floatPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(duckdb_prepared_statement, idx_t,
              ffi.Float)>>('duckdb_bind_float');
  late final _duckdb_bind_float = _duckdb_bind_floatPtr
      .asFunction<int Function(duckdb_prepared_statement, int, double)>();

  int duckdb_bind_double(
    duckdb_prepared_statement prepared_statement,
    int param_idx,
    double val,
  ) {
    return _duckdb_bind_double(
      prepared_statement,
      param_idx,
      val,
    );
  }

  late final _duckdb_bind_doublePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(duckdb_prepared_statement, idx_t,
              ffi.Double)>>('duckdb_bind_double');
  late final _duckdb_bind_double = _duckdb_bind_doublePtr
      .asFunction<int Function(duckdb_prepared_statement, int, double)>();

  int duckdb_bind_date(
    duckdb_prepared_statement prepared_statement,
    int param_idx,
    duckdb_date val,
  ) {
    return _duckdb_bind_date(
      prepared_statement,
      param_idx,
      val,
    );
  }

  late final _duckdb_bind_datePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(duckdb_prepared_statement, idx_t,
              duckdb_date)>>('duckdb_bind_date');
  late final _duckdb_bind_date = _duckdb_bind_datePtr
      .asFunction<int Function(duckdb_prepared_statement, int, duckdb_date)>();

  int duckdb_bind_time(
    duckdb_prepared_statement prepared_statement,
    int param_idx,
    duckdb_time val,
  ) {
    return _duckdb_bind_time(
      prepared_statement,
      param_idx,
      val,
    );
  }

  late final _duckdb_bind_timePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(duckdb_prepared_statement, idx_t,
              duckdb_time)>>('duckdb_bind_time');
  late final _duckdb_bind_time = _duckdb_bind_timePtr
      .asFunction<int Function(duckdb_prepared_statement, int, duckdb_time)>();

  int duckdb_bind_timestamp(
    duckdb_prepared_statement prepared_statement,
    int param_idx,
    duckdb_timestamp val,
  ) {
    return _duckdb_bind_timestamp(
      prepared_statement,
      param_idx,
      val,
    );
  }

  late final _duckdb_bind_timestampPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(duckdb_prepared_statement, idx_t,
              duckdb_timestamp)>>('duckdb_bind_timestamp');
  late final _duckdb_bind_timestamp = _duckdb_bind_timestampPtr.asFunction<
      int Function(duckdb_prepared_statement, int, duckdb_timestamp)>();

  int duckdb_bind_interval(
    duckdb_prepared_statement prepared_statement,
    int param_idx,
    duckdb_interval val,
  ) {
    return _duckdb_bind_interval(
      prepared_statement,
      param_idx,
      val,
    );
  }

  late final _duckdb_bind_intervalPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(duckdb_prepared_statement, idx_t,
              duckdb_interval)>>('duckdb_bind_interval');
  late final _duckdb_bind_interval = _duckdb_bind_intervalPtr.asFunction<
      int Function(duckdb_prepared_statement, int, duckdb_interval)>();

  int duckdb_bind_varchar(
    duckdb_prepared_statement prepared_statement,
    int param_idx,
    ffi.Pointer<ffi.Char> val,
  ) {
    return _duckdb_bind_varchar(
      prepared_statement,
      param_idx,
      val,
    );
  }

  late final _duckdb_bind_varcharPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(duckdb_prepared_statement, idx_t,
              ffi.Pointer<ffi.Char>)>>('duckdb_bind_varchar');
  late final _duckdb_bind_varchar = _duckdb_bind_varcharPtr.asFunction<
      int Function(duckdb_prepared_statement, int, ffi.Pointer<ffi.Char>)>();

  int duckdb_bind_varchar_length(
    duckdb_prepared_statement prepared_statement,
    int param_idx,
    ffi.Pointer<ffi.Char> val,
    int length,
  ) {
    return _duckdb_bind_varchar_length(
      prepared_statement,
      param_idx,
      val,
      length,
    );
  }

  late final _duckdb_bind_varchar_lengthPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(duckdb_prepared_statement, idx_t,
              ffi.Pointer<ffi.Char>, idx_t)>>('duckdb_bind_varchar_length');
  late final _duckdb_bind_varchar_length =
      _duckdb_bind_varchar_lengthPtr.asFunction<
          int Function(
              duckdb_prepared_statement, int, ffi.Pointer<ffi.Char>, int)>();

  int duckdb_bind_blob(
    duckdb_prepared_statement prepared_statement,
    int param_idx,
    ffi.Pointer<ffi.Void> data,
    int length,
  ) {
    return _duckdb_bind_blob(
      prepared_statement,
      param_idx,
      data,
      length,
    );
  }

  late final _duckdb_bind_blobPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(duckdb_prepared_statement, idx_t,
              ffi.Pointer<ffi.Void>, idx_t)>>('duckdb_bind_blob');
  late final _duckdb_bind_blob = _duckdb_bind_blobPtr.asFunction<
      int Function(
          duckdb_prepared_statement, int, ffi.Pointer<ffi.Void>, int)>();

  int duckdb_bind_null(
    duckdb_prepared_statement prepared_statement,
    int param_idx,
  ) {
    return _duckdb_bind_null(
      prepared_statement,
      param_idx,
    );
  }

  late final _duckdb_bind_nullPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              duckdb_prepared_statement, idx_t)>>('duckdb_bind_null');
  late final _duckdb_bind_null = _duckdb_bind_nullPtr
      .asFunction<int Function(duckdb_prepared_statement, int)>();

  int duckdb_execute_prepared(
    duckdb_prepared_statement prepared_statement,
    ffi.Pointer<duckdb_result> out_result,
  ) {
    return _duckdb_execute_prepared(
      prepared_statement,
      out_result,
    );
  }

  late final _duckdb_execute_preparedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(duckdb_prepared_statement,
              ffi.Pointer<duckdb_result>)>>('duckdb_execute_prepared');
  late final _duckdb_execute_prepared = _duckdb_execute_preparedPtr.asFunction<
      int Function(duckdb_prepared_statement, ffi.Pointer<duckdb_result>)>();

  int duckdb_execute_prepared_arrow(
    duckdb_prepared_statement prepared_statement,
    ffi.Pointer<duckdb_arrow> out_result,
  ) {
    return _duckdb_execute_prepared_arrow(
      prepared_statement,
      out_result,
    );
  }

  late final _duckdb_execute_prepared_arrowPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(duckdb_prepared_statement,
              ffi.Pointer<duckdb_arrow>)>>('duckdb_execute_prepared_arrow');
  late final _duckdb_execute_prepared_arrow =
      _duckdb_execute_prepared_arrowPtr.asFunction<
          int Function(duckdb_prepared_statement, ffi.Pointer<duckdb_arrow>)>();

  int duckdb_pending_prepared(
    duckdb_prepared_statement prepared_statement,
    ffi.Pointer<duckdb_pending_result> out_result,
  ) {
    return _duckdb_pending_prepared(
      prepared_statement,
      out_result,
    );
  }

  late final _duckdb_pending_preparedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(duckdb_prepared_statement,
              ffi.Pointer<duckdb_pending_result>)>>('duckdb_pending_prepared');
  late final _duckdb_pending_prepared = _duckdb_pending_preparedPtr.asFunction<
      int Function(
          duckdb_prepared_statement, ffi.Pointer<duckdb_pending_result>)>();

  void duckdb_destroy_pending(
    ffi.Pointer<duckdb_pending_result> pending_result,
  ) {
    return _duckdb_destroy_pending(
      pending_result,
    );
  }

  late final _duckdb_destroy_pendingPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<duckdb_pending_result>)>>('duckdb_destroy_pending');
  late final _duckdb_destroy_pending = _duckdb_destroy_pendingPtr
      .asFunction<void Function(ffi.Pointer<duckdb_pending_result>)>();

  ffi.Pointer<ffi.Char> duckdb_pending_error(
    duckdb_pending_result pending_result,
  ) {
    return _duckdb_pending_error(
      pending_result,
    );
  }

  late final _duckdb_pending_errorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              duckdb_pending_result)>>('duckdb_pending_error');
  late final _duckdb_pending_error = _duckdb_pending_errorPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(duckdb_pending_result)>();

  int duckdb_pending_execute_task(
    duckdb_pending_result pending_result,
  ) {
    return _duckdb_pending_execute_task(
      pending_result,
    );
  }

  late final _duckdb_pending_execute_taskPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(duckdb_pending_result)>>(
          'duckdb_pending_execute_task');
  late final _duckdb_pending_execute_task = _duckdb_pending_execute_taskPtr
      .asFunction<int Function(duckdb_pending_result)>();

  int duckdb_execute_pending(
    duckdb_pending_result pending_result,
    ffi.Pointer<duckdb_result> out_result,
  ) {
    return _duckdb_execute_pending(
      pending_result,
      out_result,
    );
  }

  late final _duckdb_execute_pendingPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(duckdb_pending_result,
              ffi.Pointer<duckdb_result>)>>('duckdb_execute_pending');
  late final _duckdb_execute_pending = _duckdb_execute_pendingPtr.asFunction<
      int Function(duckdb_pending_result, ffi.Pointer<duckdb_result>)>();

  void duckdb_destroy_value(
    ffi.Pointer<duckdb_value> value,
  ) {
    return _duckdb_destroy_value(
      value,
    );
  }

  late final _duckdb_destroy_valuePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<duckdb_value>)>>(
          'duckdb_destroy_value');
  late final _duckdb_destroy_value = _duckdb_destroy_valuePtr
      .asFunction<void Function(ffi.Pointer<duckdb_value>)>();

  duckdb_value duckdb_create_varchar(
    ffi.Pointer<ffi.Char> text,
  ) {
    return _duckdb_create_varchar(
      text,
    );
  }

  late final _duckdb_create_varcharPtr =
      _lookup<ffi.NativeFunction<duckdb_value Function(ffi.Pointer<ffi.Char>)>>(
          'duckdb_create_varchar');
  late final _duckdb_create_varchar = _duckdb_create_varcharPtr
      .asFunction<duckdb_value Function(ffi.Pointer<ffi.Char>)>();

  duckdb_value duckdb_create_varchar_length(
    ffi.Pointer<ffi.Char> text,
    int length,
  ) {
    return _duckdb_create_varchar_length(
      text,
      length,
    );
  }

  late final _duckdb_create_varchar_lengthPtr = _lookup<
      ffi.NativeFunction<
          duckdb_value Function(
              ffi.Pointer<ffi.Char>, idx_t)>>('duckdb_create_varchar_length');
  late final _duckdb_create_varchar_length = _duckdb_create_varchar_lengthPtr
      .asFunction<duckdb_value Function(ffi.Pointer<ffi.Char>, int)>();
